--- a/resources/scss/ceres/widgets/_widgets.scss
+++ b/resources/scss/ceres/widgets/_widgets.scss
@@ -1,6 +1,7 @@
 @import "mixins/mixins";
 
 @import "Checkout/provider-select-widget";
+@import "Checkout/shipping-privacy-check";
 @import "Common/image-box-widget";
 @import "Common/image-carousel-widget";
 @import "Common/item-list-widget";
@@ -13,3 +14,4 @@
 @import "Common/title-bar-widget";
 @import "Grid/grid-widget";
 @import "Helper/base-widget";
+@import "Helper/widget-placeholder";
