--- a/resources/css/ceres.css
+++ b/resources/css/ceres.css
@@ -23850,6 +23850,10 @@ html.ios .parallax-img-container .parallax-img-container-inner[style^='backgroun
   box-shadow: inset 0 0 0 0.1rem #dc3545;
 }
 
+.widget-shipping-privacy-check .widget-placeholder {
+  padding-bottom: 50%;
+}
+
 @media (max-width: 575.98px) {
   .widget-image-box {
     padding-bottom: 0 !important;
@@ -24643,29 +24647,8 @@ html.ie .widget-image-carousel .widget-inner .carousel-item .img-cover {
   }
 }
 
-.live-shopping-placeholder {
-  width: 100%;
+.widget-live-shopping .widget-placeholder {
   padding-bottom: 150%;
-  position: relative;
-  background-color: #dcdbd8;
-}
-
-.live-shopping-placeholder > div {
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  text-align: center;
-  padding: 1rem;
-  width: 100%;
-}
-
-.live-shopping-placeholder .title {
-  font-weight: bold;
-  font-size: 1.3rem;
-}
-
-.live-shopping-placeholder .description {
-  font-style: italic;
 }
 
 .widget-newsletter > .widget-inner {
@@ -25027,6 +25010,31 @@ html.ie .widget-image-carousel .widget-inner .carousel-item .img-cover {
 
 .widget-editable-min-height {
   min-height: 40px;
+}
+
+.widget-placeholder {
+  width: 100%;
+  padding-bottom: 100%;
+  position: relative;
+  background-color: #dcdbd8;
+}
+
+.widget-placeholder > div {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: center;
+  padding: 1rem;
+  width: 100%;
+}
+
+.widget-placeholder .title {
+  font-weight: bold;
+  font-size: 1.3rem;
+}
+
+.widget-placeholder .description {
+  font-style: italic;
 }
 
 @media (max-width: 575.98px) {
