--- a/resources/views/MyAccount/MyAccount.twig
+++ b/resources/views/MyAccount/MyAccount.twig
@@ -76,8 +76,7 @@
                 <p class="text-muted small font-italic">{{ trans("Ceres::Template.myAccountChangeLoginData") }}</p>
 
                 <div class="card mb-5">
-                    <account-settings template="#vue-account-settings" :user-data="{{ userObject }}">
-                        <account-settings>
+                    <account-settings template="#vue-account-settings" :user-data="{{ userObject }}"></account-settings>
                 </div>
             </div>
 
