--- a/resources/views/Checkout/CheckoutCategory.twig
+++ b/resources/views/Checkout/CheckoutCategory.twig
@@ -10,17 +10,35 @@
 {% endblock %}
 
 {% block PageBody %}
+    {{ component( "Ceres::Checkout.Components.Checkout" ) }}
+
     {% set shopBuilderTemplate = shop_builder_category_template(category.id, "checkout") %}
     {% if shopBuilderTemplate | trim is not empty %}
-        <div class="container-max">
+        <div class="page-content checkout container-max">
             <div class="row">
                 <div class="col">
-                    {{ shopBuilderTemplate | raw }}
+                    <checkout
+                        v-cloak
+                        :initial-checkout="{{ services.checkout.getCheckout() | json_encode() }}"
+                        :delivery-address-list="{{ services.customer.getAddresses(2) | json_encode }}"
+                        :selected-delivery-address="{{ services.checkout.getDeliveryAddressId() | json_encode }}"
+                        :billing-address-list="{{ services.customer.getAddresses(1) | json_encode }}"
+                        :selected-billing-address="{{ services.checkout.getBillingAddressId() | json_encode }}">
+                            {{ shopBuilderTemplate | raw }}
+                    </chekcout>
                 </div>
             </div>
         </div>
     {% else %}
-        {% include category_template( category.id, lang, webstoreConfig.webstoreId ) ignore missing %}
+        <checkout
+            v-cloak
+            :initial-checkout="{{ services.checkout.getCheckout() | json_encode() }}"
+            :delivery-address-list="{{ services.customer.getAddresses(2) | json_encode }}"
+            :selected-delivery-address="{{ services.checkout.getDeliveryAddressId() | json_encode }}"
+            :billing-address-list="{{ services.customer.getAddresses(1) | json_encode }}"
+            :selected-billing-address="{{ services.checkout.getBillingAddressId() | json_encode }}">
+            {% include category_template( category.id, lang, webstoreConfig.webstoreId ) ignore missing %}
+        </chekcout>
     {% endif %}
 
 {% endblock %}
