--- a/resources/views/Widgets/Common/ListWidget.twig
+++ b/resources/views/Widgets/Common/ListWidget.twig
@@ -1,10 +1,7 @@
-{% import "Ceres::Widgets.Helper.TwigBuilder" as Twig %}
-{% import "Ceres::Widgets.Helper.TwigWidgetMacros" as WidgetHelpers %}
-
 {% set title            = widget.settings.title.mobile %}
 {% set icon             = widget.settings.icon.mobile %}
 {% set centered         = widget.settings.centered.mobile %}
-{% set hasEntries       = false %}
+{% set hasEntries    = false %}
 
 {% for entry in listEntries if entry.text is not empty %}
     {% set hasEntries = true %}
@@ -17,20 +14,16 @@
             {% if listEntries | length > 0 %}
                 <ul class="list-unstyled{% if centered %} list-centered{% endif %}">
                     {% for entry in listEntries %}
-                        {{ WidgetHelpers.getUrlPicker(entry.url.value, entry.url.type) }}
                         <li>
                             {% if icon != "none" %}
                                 <i class="fa {{ icon }}" aria-hidden="true"></i>
                             {% endif %}
 
-                            {% if entry.url.value is not empty %}
-                                <a  {{ Twig.if("url | trim is not empty") }} href="{{ Twig.print("url") }}"
-                                    {{ Twig.else("imageUrl | trim is not empty") }} href="{{ Twig.print("imageUrl") }}"{{ Twig.endif() }}>
-                                        {{ entry.text }}
-                                    {% else %}
-                                        {{ entry.text }}
-                                    {% endif %}
-                                </a>
+                            {% if entry.url is not empty %}
+                                <a href="{{ entry.url }}">{{ entry.text }}</a>
+                            {% else %}
+                                {{ entry.text }}
+                            {% endif %}
                         </li>
                     {% endfor %}
                 </ul>
