--- a/resources/views/Widgets/Common/ImageCarouselWidget.twig
+++ b/resources/views/Widgets/Common/ImageCarouselWidget.twig
@@ -8,22 +8,20 @@
 
 {{ Twig.set("slides", "[]") }}
 
-{% set slideData = widget.settings.slides %}
-
+{% set slideData = widget.settings.slides.mobile %}
 {% if sliderParams is not empty and slideData is empty %}
     {% set slideData = sliderParams.mobile %}
 {% endif %}
 
-
-{% for slideSettings in slideData.mobile %}
+{% for slideSettings in slideData %}
 
     {{ Twig.set("slide", "{ headlineStyle: '#{ slideSettings.headlineStyle }' }") }}
 
     {% set pushCurrentSlide = false %}
 
-    {% if slideSettings.url.type == 'category' %}
+    {% if slideSettings.categoryId | trim is not empty %}
 
-        {{ Twig.set("category", Twig.call("services.category.get", [slideSettings.url.value])) }}
+        {{ Twig.set("category", Twig.call("services.category.get", [slideSettings.categoryId])) }}
         {{ Twig.set("categoryUrl", Twig.call("services.category.getURL", ["$category"]) ) }}
 
         {{ Twig.set("slide", "slide | merge({ name: category.details[0].name })") }}
@@ -31,11 +29,10 @@
         {{ Twig.set("slide", "slide | merge({ imageUrl: \"documents/\" ~ category.details[0].imagePath })") }}
 
         {% set pushCurrentSlide = true %}
-    {% endif %}
 
-    {% if slideSettings.url.type == 'item' %}
+    {% elseif slideSettings.variationId | trim is not empty %}
 
-        {{ Twig.set("itemData", Twig.call("services.item.getVariation", [slideSettings.url.value])) }}
+        {{ Twig.set("itemData", Twig.call("services.item.getVariation", [slideSettings.variationId])) }}
         {{ Twig.set("itemData", "itemData.documents[0].data") }}
         {{ Twig.set("itemImage", "itemData.images | itemImages | orderByKey('position') | first") }}
 
@@ -51,9 +48,9 @@
 
     {% endif %}
 
-    {% if slideSettings.url.type == 'file' or slideSettings.url.type == 'external' %}
+    {% if slideSettings.customImagePath | trim is not empty %}
 
-        {{ Twig.set("slide", "slide | merge({ imageUrl: #{ slideSettings.url.value | json_encode } })") }}
+        {{ Twig.set("slide", "slide | merge({ imageUrl: #{ slideSettings.customImagePath | json_encode } })") }}
 
         {% set pushCurrentSlide = true %}
 
