--- a/resources/views/Customer/Components/AddressInputGroup/Locale/DeliveryAddressInputGroupGB.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/DeliveryAddressInputGroupGB.twig
@@ -9,7 +9,7 @@
         <div v-if="isInOptionalFields('gb', 'delivery_address.salutation')" class="col-12 col-sm-4">
             <div class="input-unit"
                 v-data-validate="{shouldAddProperty: isInRequiredFields('gb', 'delivery_address.salutation'), validateType: ''}">
-                <salutation-select template="#vue-salutation-select" :address-type="addressType" :address-data="value" @input="emitInputEvent($event.field, $event.value)"></salutation-select>
+                <salutation-select :address-type="addressType" :address-data="value" :enabled-address-fields="optionalAddressFields" @input="emitInputEvent($event.field, $event.value)"></salutation-select>
                 <label :for="'txtSalutation' + _uid">
                     ${ '{{ trans("Ceres::Template.addressSalutation") }}' | transformRequiredLabel(isInOptionalFields('gb', 'delivery_address.salutation')) }
                 </label>
