Remove top spacing

--- a/resources/views/Widgets/Checkout/BasketWidget.twig
+++ b/resources/views/Widgets/Checkout/BasketWidget.twig
@@ -5,7 +5,7 @@
 {% set appearance = widget.settings.appearance.mobile %}
 
 <div class="widget widget-basket">
-    <div class="pt-4">
+    <div>
         <h3>{{ Twig.trans("Ceres::Template.checkoutBasket") }}</h3>
         <hr class="mb-0">
     </div>
