--- a/resources/views/Customer/Components/AddressInputGroup/Locale/BillingAddressInputGroupDE.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/BillingAddressInputGroupDE.twig
@@ -19,7 +19,7 @@
     <div class="row">
         <div
             class="col-12 col-sm-6"
-            v-if="(isInOptionalFields('de', 'billing_address.salutation') && value.addressSalutation === 2) || isInOptionalFields('de', 'billing_address.name1')">
+            v-if="(isInOptionalFields('de', 'billing_address.salutation') && value.addressSalutation === 2) || isInOptionalFields('de', 'billing_address.name1') && !isInOptionalFields('de', 'billing_address.salutation')">
             <div class="input-unit" data-validate="text" data-model="name1">
                 <input type="text" name="company" :id="'txtCompany' + _uid" :value="value.name1" @input="emitInputEvent('name1', $event.target.value)" data-autofocus>
                 <label :for="'txtCompany' + _uid">{{ trans("Ceres::Template.addressCompany") }}*</label>
@@ -57,13 +57,13 @@
         </div>
 
         <template v-if="!(isInOptionalFields('de', 'billing_address.name1') && !isInOptionalFields('de', 'billing_address.salutation'))">
-            <div class="col-12 col-sm-4" v-if="value.addressSalutation !== 2">
+            <div class="col-12 col-sm-4" v-if="!(isInOptionalFields('de', 'billing_address.salutation') && value.addressSalutation !== 2)">
                 <div class="input-unit" data-validate="text" data-model="name2">
                     <input type="text" name="firstName" :id="'txtFirstName' + _uid" :value="value.name2"  @input="emitInputEvent('name2', $event.target.value)" data-autofocus>
                     <label :for="'txtFirstName' + _uid">{{ trans("Ceres::Template.addressFirstName") }}*</label>
                 </div>
             </div>
-            <div class="col-12 col-sm-4" v-if="value.addressSalutation !== 2">
+            <div class="col-12 col-sm-4" v-if="!(isInOptionalFields('de', 'billing_address.salutation') && value.addressSalutation !== 2)">
                 <div class="input-unit" data-validate="text" data-model="name3">
                     <input type="text" name="lastName" :id="'txtLastName' + _uid" :value="value.name3" @input="emitInputEvent('name3', $event.target.value)">
                     <label :for="'txtLastName' + _uid">{{ trans("Ceres::Template.addressLastName") }}*</label>
