--- a/resources/views/Customer/Components/AddressInputGroup/Locale/DHLPackingStationAddressInputGroupDE.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/DHLPackingStationAddressInputGroupDE.twig
@@ -49,7 +49,7 @@
 
         <template v-if="!isInOptionalFields('de', 'delivery_address.name1') && !isInOptionalFields('de', 'delivery_address.salutation')">
             {# First name #}
-            <div class="col-12 col-sm-4">
+            <div class="col-12 col-sm-4" v-if="!(isInOptionalFields('de', 'delivery_address.salutation') && value.addressSalutation !== 2)">
                 <div class="input-unit" data-validate="text" data-model="name2">
                     <input type="text" name="firstName" :id="'txtFirstName' + _uid" :value="value.name2" @input="emitInputEvent('name2', $event.target.value)">
                     <label :for="'txtFirstName' + _uid">{{ trans("Ceres::Template.addressFirstName") }}*</label>
@@ -57,7 +57,7 @@
             </div>
     
             {# Last name #}
-            <div class="col-12 col-sm-4">
+            <div class="col-12 col-sm-4" v-if="!(isInOptionalFields('de', 'delivery_address.salutation') && value.addressSalutation !== 2)">
                 <div class="input-unit" data-validate="text" data-model="name3">
                     <input type="text" name="lastName" :id="'txtLastName' + _uid" :value="value.name3" @input="emitInputEvent('name3', $event.target.value)">
                     <label :for="'txtLastName' + _uid">{{ trans("Ceres::Template.addressLastName") }}*</label>
