--- a/resources/views/Customer/Components/AddressInputGroup/Locale/BillingAddressInputGroupGB.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/BillingAddressInputGroupGB.twig
@@ -68,7 +68,7 @@
         </template>
 
         <div
-            v-if="(isInOptionalFields('gb', 'billing_address.salutation') && value.addressSalutation === 2) || isInOptionalFields('gb', 'billing_address.name1')"
+            v-if="(isInOptionalFields('gb', 'billing_address.salutation') && value.addressSalutation === 2) || isInOptionalFields('gb', 'billing_address.name1') && !isInOptionalFields('gb', 'billing_address.salutation')"
             class="col-xs-12 col-sm-8">
             <div class="input-unit" data-validate="text" data-model="contactPerson">
                 <input type="text" name="lastName" :id="'txtContactPerson' + _uid" :value="value.contactPerson" @input="emitInputEvent('contactPerson', $event.target.value)">
