--- a/resources/views/Customer/Components/AddressInputGroup/Locale/DeliveryAddressInputGroupGB.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/DeliveryAddressInputGroupGB.twig
@@ -64,7 +64,7 @@
 
         <div
             class="col-xs-12 col-sm-8"
-            v-if="(isInOptionalFields('gb', 'delivery_address.salutation') && value.addressSalutation === 2) || isInOptionalFields('gb', 'delivery_address.name1')">
+            v-if="(isInOptionalFields('gb', 'delivery_address.salutation') && value.addressSalutation === 2) || isInOptionalFields('gb', 'delivery_address.name1') && !isInOptionalFields('gb', 'delivery_address.salutation')">
             <div class="input-unit" data-validate="text" data-model="contactPerson">
                 <input type="text" name="lastName" :id="'txtContactPerson' + _uid" :value="value.contactPerson" @input="emitInputEvent('contactPerson', $event.target.value)">
                 <label :for="'txtContactPerson' + _uid">{{ trans("Ceres::Template.addressContactPerson") }}*</label>
