--- a/resources/views/Customer/Components/AddressInputGroup/Locale/DeliveryAddressInputGroupGB.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/DeliveryAddressInputGroupGB.twig
@@ -47,14 +47,14 @@
         </div>
 
         <template v-if="!(isInOptionalFields('gb', 'delivery_address.name1') && !isInOptionalFields('gb', 'delivery_address.salutation'))">
-            <div class="col-12 col-sm-4" v-if="!(isInOptionalFields('gb', 'delivery_address.salutation') && value.addressSalutation !== 2)">
+            <div class="col-12 col-sm-4" v-if="value.addressSalutation !== 2 || !isInOptionalFields('gb', 'delivery_address.salutation')">
                 <div class="input-unit" data-validate="text" data-model="name2">
                     <input type="text" name="firstName" :id="'txtFirstName' + _uid" :value="value.name2" @input="emitInputEvent('name2', $event.target.value)" data-autofocus>
                     <label :for="'txtFirstName' + _uid">{{ trans("Ceres::Template.addressFirstName") }}*</label>
                 </div>
             </div>
 
-            <div class="col-12 col-sm-4" v-if="!(isInOptionalFields('gb', 'delivery_address.salutation') && value.addressSalutation !== 2)">
+            <div class="col-12 col-sm-4" v-if="value.addressSalutation !== 2 || !isInOptionalFields('gb', 'delivery_address.salutation')">
                 <div class="input-unit" data-validate="text" data-model="name3">
                     <input type="text" name="lastName" :id="'txtLastName' + _uid" :value="value.name3" @input="emitInputEvent('name3', $event.target.value)">
                     <label :for="'txtLastName' + _uid">{{ trans("Ceres::Template.addressLastName") }}*</label>
