--- a/resources/views/Customer/Components/AddressInputGroup/Locale/DHLPackingStationAddressInputGroupDE.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/DHLPackingStationAddressInputGroupDE.twig
@@ -47,7 +47,7 @@
             </div>
         </div>
 
-        <template v-if="!isInOptionalFields('de', 'delivery_address.name1') && !isInOptionalFields('de', 'delivery_address.salutation')">
+        <template v-if="!(isInOptionalFields('de', 'delivery_address.name1') && !isInOptionalFields('de', 'delivery_address.salutation'))">
             {# First name #}
             <div class="col-12 col-sm-4" v-if="value.addressSalutation !== 2 || !isInOptionalFields('de', 'delivery_address.salutation')">
                 <div class="input-unit" data-validate="text" data-model="name2">
