FIX AddressInputGroups - hide company field for mr., mrs.

--- a/resources/views/Customer/Components/AddressInputGroup/Locale/DHLPackingStationAddressInputGroupDE.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/DHLPackingStationAddressInputGroupDE.twig
@@ -19,7 +19,7 @@
     <div class="row">
         <div
             class="col-12 col-sm-6"
-            v-if="(isInOptionalFields('de', 'delivery_address.salutation') && value.addressSalutation === 2) || isInOptionalFields('de', 'delivery_address.name1')">
+            v-if="isInOptionalFields('de', 'delivery_address.salutation') && value.addressSalutation === 2 || isInOptionalFields('de', 'delivery_address.name1') && !isInOptionalFields('de', 'delivery_address.salutation')">
             <div
                 class="input-unit"
                 data-model="name1"
