--- a/resources/views/Customer/Components/AddressInputGroup/Locale/DeliveryAddressInputGroupGB.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/DeliveryAddressInputGroupGB.twig
@@ -22,7 +22,7 @@
     <div class="row">
         <div
             class="col-12 col-sm-6"
-            v-if="(isInOptionalFields('gb', 'delivery_address.salutation') && value.addressSalutation === 2) || isInOptionalFields('gb', 'delivery_address.name1')">
+            v-if="isInOptionalFields('gb', 'delivery_address.salutation') && value.addressSalutation === 2 || isInOptionalFields('gb', 'delivery_address.name1') && !isInOptionalFields('gb', 'delivery_address.salutation')">
             <div class="input-unit" data-validate="text" data-model="name1">
                 <input type="text" name="company" :id="'txtCompany' + _uid" :value="value.name1" @input="emitInputEvent('name1', $event.target.value)" data-autofocus>
                 <label :for="'txtCompany' + _uid">{{ trans("Ceres::Template.addressCompany") }}*</label>
