Add new Layout Container

--- a/resources/views/PageDesign/PageDesign.twig
+++ b/resources/views/PageDesign/PageDesign.twig
@@ -39,6 +39,10 @@
 </head>
 
 <body>
+
+{{ LayoutContainer.show("Ceres::PageDesign.AfterOpeningBodyTag") }}
+
+
 <script>
     if('ontouchstart' in document.documentElement)
     {
@@ -226,7 +230,7 @@
 
 
     (function($) {
-        
+
         var header = document.getElementById('page-header');
         var headerLoaded = false;
         var unfixedElements = [];
@@ -286,7 +290,7 @@
                     });
                 }
             }
-            
+
             $(window).scroll(scrollUnfixedElements);
 
             $(document).on('shopbuilder.after.ready', function()
