--- a/resources/views/Widgets/WidgetComponents.twig
+++ b/resources/views/Widgets/WidgetComponents.twig
@@ -1,3 +1,4 @@
 {{ component( 'Ceres::LiveShopping.Components.LiveShoppingItem' ) }}
 {{ component( "Ceres::Newsletter.Components.NewsletterInput" ) }}
 {{ component( "Ceres::Containers.Components.LastSeenItemList" ) }}
+{{ component( "Ceres::MyAccount.Components.AccountSettings" ) }}
