ADD appearance to widget settings

--- a/resources/scss/ceres/widgets/_widgets.scss
+++ b/resources/scss/ceres/widgets/_widgets.scss
@@ -12,6 +12,7 @@
 @import "Common/newsletter-widget";
 @import "Common/text-widget";
 @import "Common/title-bar-widget";
+@import "Customer/address-widget";
 @import "Grid/grid-widget";
 @import "Helper/base-widget";
 @import "Helper/widget-placeholder";
