--- a/resources/views/Customer/Components/AddressInputGroup/Locale/BillingAddressInputGroupDE.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/BillingAddressInputGroupDE.twig
@@ -8,7 +8,7 @@
                 v-data-validate="{shouldAddProperty: isInRequiredFields('de', 'billing_address.salutation'), validateType: ''}">
                 <salutation-select :address-type="addressType" :address-data="value" :enabled-address-fields="optionalAddressFields" @input="emitInputEvent($event.field, $event.value)"></salutation-select>
                 <label :for="'txtSalutation' + _uid">
-                    ${ '{{ trans("Ceres::Template.addressSalutation") }}' | transformRequiredLabel(isInOptionalFields('de', 'billing_address.salutation')) }
+                    ${ '{{ trans("Ceres::Template.addressSalutation") }}' | transformRequiredLabel(isInRequiredFields('de', 'billing_address.salutation')) }
                 </label>
             </div>
         </div>
@@ -35,7 +35,7 @@
                 v-data-validate="{shouldAddProperty: isInRequiredFields('de', 'billing_address.vatNumber'), validateType: 'text'}">
                 <input type="text" name="vatNumber" :id="'txtVatNumber' + _uid" :value="value.vatNumber"  @input="emitInputEvent('vatNumber', $event.target.value)" data-autofocus>
                 <label :for="'txtVatNumber' + _uid">
-                    ${ '{{ trans("Ceres::Template.addressVatNumber") }}' | transformRequiredLabel(isInOptionalFields('de', 'billing_address.vatNumber')) }
+                    ${ '{{ trans("Ceres::Template.addressVatNumber") }}' | transformRequiredLabel(isInRequiredFields('de', 'billing_address.vatNumber')) }
                 </label>
             </div>
         </div>
@@ -51,7 +51,7 @@
                 v-data-validate="{shouldAddProperty: isInRequiredFields('de', 'billing_address.title'), validateType: 'text'}">
                 <input type="text" name="title" :id="'txtTitle' + _uid" :value="value.title"  @input="emitInputEvent('title', $event.target.value)" data-autofocus>
                 <label :for="'txtTitle' + _uid">
-                    ${ '{{ trans("Ceres::Template.addressTitle") }}' | transformRequiredLabel(isInOptionalFields('de', 'billing_address.title')) }
+                    ${ '{{ trans("Ceres::Template.addressTitle") }}' | transformRequiredLabel(isInRequiredFields('de', 'billing_address.title')) }
                 </label>
             </div>
         </div>
@@ -87,7 +87,7 @@
                 v-data-validate="{shouldAddProperty: isInRequiredFields('de', 'billing_address.name4'), validateType: 'text'}">
                 <input type="text" name="decorateName" :id="'txtAdditionalName' + _uid" :value="value.name4" @input="emitInputEvent('name4', $event.target.value)">
                 <label :for="'txtAdditionalName' + _uid">
-                    ${ '{{ trans("Ceres::Template.addressAdditionalName") }}' | transformRequiredLabel(isInOptionalFields('de', 'billing_address.name4')) }
+                    ${ '{{ trans("Ceres::Template.addressAdditionalName") }}' | transformRequiredLabel(isInRequiredFields('de', 'billing_address.name4')) }
                 </label>
             </div>
         </div>
@@ -99,7 +99,7 @@
                 v-data-validate="{shouldAddProperty: isInRequiredFields('de', 'billing_address.birthday'), validateType: 'date'}">
                 <input type="date" min="1901-12-14" :max="new Date().toISOString().split('T')[0]" name="birthday" placeholder="{{ trans("Ceres::Template.addressBirthdatePlaceholder") }}" :id="'txtBirthdate' + _uid" :value="value.birthday" @input="emitInputEvent('birthday', $event.target.value)">
                 <label :for="'txtBirthdate' + _uid">
-                    ${ '{{ trans("Ceres::Template.addressBirthdate") }}' | transformRequiredLabel(isInOptionalFields('de', 'billing_address.birthday')) }
+                    ${ '{{ trans("Ceres::Template.addressBirthdate") }}' | transformRequiredLabel(isInRequiredFields('de', 'billing_address.birthday')) }
                 </label>
             </div>
         </div>
@@ -111,7 +111,7 @@
                 v-data-validate="{shouldAddProperty: isInRequiredFields('de', 'billing_address.phoneNumber'), validateType: 'text'}">
                 <input type="text" name="telephone" :id="'txtTelephone' + _uid" :value="value.telephone" @input="emitInputEvent('telephone', $event.target.value)">
                 <label :for="'txtTelephone' + _uid">
-                    ${ '{{ trans("Ceres::Template.addressTelephone") }}' | transformRequiredLabel(isInOptionalFields('de', 'billing_address.phoneNumber')) }
+                    ${ '{{ trans("Ceres::Template.addressTelephone") }}' | transformRequiredLabel(isInRequiredFields('de', 'billing_address.phoneNumber')) }
                 </label>
             </div>
         </div>
@@ -145,7 +145,7 @@
                 v-data-validate="{shouldAddProperty: isInRequiredFields('de', 'billing_address.address3'), validateType: 'text'}">
                 <input type="text" name="decorateAddress" :id="'decorateAddress0' + _uid" :value="value.address3" @input="emitInputEvent('address3', $event.target.value)">
                 <label :for="'decorateAddress0' + _uid">
-                    ${ '{{ trans("Ceres::Template.addressAdditionalAddress1") }}' | transformRequiredLabel(isInOptionalFields('de', 'billing_address.address3')) }
+                    ${ '{{ trans("Ceres::Template.addressAdditionalAddress1") }}' | transformRequiredLabel(isInRequiredFields('de', 'billing_address.address3')) }
                 </label>
             </div>
         </div>
@@ -157,7 +157,7 @@
                 v-data-validate="{shouldAddProperty: isInRequiredFields('de', 'billing_address.address4'), validateType: 'text'}">
                 <input type="text" name="decorateAddress" :id="'decorateAddress1' + _uid" :value="value.address4" @input="emitInputEvent('address4', $event.target.value)">
                 <label :for="'decorateAddress1' + _uid">
-                    ${ '{{ trans("Ceres::Template.addressAdditionalAddress2") }}' | transformRequiredLabel(isInOptionalFields('de', 'billing_address.address4')) }
+                    ${ '{{ trans("Ceres::Template.addressAdditionalAddress2") }}' | transformRequiredLabel(isInRequiredFields('de', 'billing_address.address4')) }
                 </label>
             </div>
         </div>
