--- a/resources/views/Customer/Components/AddressInputGroup/Locale/BillingAddressInputGroupGB.twig
+++ b/resources/views/Customer/Components/AddressInputGroup/Locale/BillingAddressInputGroupGB.twig
@@ -83,7 +83,7 @@
                 v-data-validate="{shouldAddProperty: isInRequiredFields('gb', 'billing_address.name4'), validateType: 'text'}">
                 <input type="text" name="decorateName" :id="'txtAdditionalName' + _uid" :value="value.name4" @input="emitInputEvent('name4', $event.target.value)">
                 <label :for="'txtAdditionalName' + _uid">
-                    ${ '{{ trans("Ceres::Template.addressGBNameAffix") }}' | transformRequiredLabel(isInOptionalFields('gb', 'billing_address.name4')) }
+                    ${ '{{ trans("Ceres::Template.addressGBNameAffix") }}' | transformRequiredLabel(isInRequiredFields('gb', 'billing_address.name4')) }
                 </label>
             </div>
         </div>
@@ -105,7 +105,7 @@
                 v-data-validate="{shouldAddProperty: isInRequiredFields('gb', 'billing_address.phoneNumber'), validateType: 'text'}">
                 <input type="text" name="telephone" :id="'txtTelephone' + _uid" :value="value.telephone" @input="emitInputEvent('telephone', $event.target.value)">
                 <label :for="'txtTelephone' + _uid">
-                    ${ '{{ trans("Ceres::Template.addressTelephone") }}' | transformRequiredLabel(isInOptionalFields('gb', 'billing_address.phoneNumber')) }
+                    ${ '{{ trans("Ceres::Template.addressTelephone") }}' | transformRequiredLabel(isInRequiredFields('gb', 'billing_address.phoneNumber')) }
                 </label>
             </div>
         </div>
@@ -141,7 +141,7 @@
                 v-data-validate="{shouldAddProperty: isInRequiredFields('gb', 'billing_address.address3'), validateType: 'text'}">
                 <input type="text" name="buildingName" :id="'decorateAddress0' + _uid" :value="value.address3"  @input="emitInputEvent('address3', $event.target.value)">
                 <label :for="'decorateAddress0' + _uid">
-                    ${ '{{ trans("Ceres::Template.addressENAddressLine3") }}' | transformRequiredLabel(isInOptionalFields('gb', 'billing_address.address3')) }
+                    ${ '{{ trans("Ceres::Template.addressENAddressLine3") }}' | transformRequiredLabel(isInRequiredFields('gb', 'billing_address.address3')) }
                 </label>
             </div>
         </div>
@@ -153,7 +153,7 @@
                 v-data-validate="{shouldAddProperty: isInRequiredFields('gb', 'billing_address.address4'), validateType: 'text'}">
                 <input type="text" name="buildingName" :id="'decorateAddress0' + _uid" :value="value.address4"  @input="emitInputEvent('address4', $event.target.value)">
                 <label :for="'decorateAddress0' + _uid">
-                    ${ '{{ trans("Ceres::Template.addressENAddressLine4") }}' | transformRequiredLabel(isInOptionalFields('gb', 'billing_address.address4')) }
+                    ${ '{{ trans("Ceres::Template.addressENAddressLine4") }}' | transformRequiredLabel(isInRequiredFields('gb', 'billing_address.address4')) }
                 </label>
             </div>
         </div>
