--- a/resources/css/ceres.scss
+++ b/resources/css/ceres.scss
@@ -19973,6 +19973,23 @@ html.ie {
         @include widget-bg-variant($danger);
     }
 }
+.widget-address
+{
+    @each $color, $value in $shop-builder-colors
+    {
+        &.widget-#{$color}
+        {
+            .btn-primary
+            {
+                @extend .btn-#{$color};
+            }
+            .btn-outline-primary
+            {
+                @extend .btn-outline-#{$color};
+            }
+        }
+    }
+}
 .widget-grid
 {
     > .widget-inner
